# OMNAFK

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  community_profile.yml  config.yml  feature_request.yml  game_detection.yml  installer_update.yml
.github/workflows/: checks.yml  pages-cleanup.yml  release.yml
community/: README.md  manifest.json  schema.md
community/profiles/: gta5.json  robloxplayer.json  robloxplayerbeta.json
design/: omnafk-installer-mockup.html  omnafk-mockup.html
docs/: COMMUNITY.md  GAMEPAD.md  GUIDE.md  IMPLEMENTATION.md  IPC.md  OMNAFK-UI-SPEC.md  RELEASING.md  TROUBLESHOOTING.md  index.html
docs/releases/: v0.1.10.md  v0.1.11.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.18.md  v0.1.19.md  v0.1.20.md  v0.1.3.md  (+6 more)
scripts/: build-custom-installer.ps1  validate-community.ps1
src/: index.html  setup.html  tray-menu.html
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json  tauri.setup.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: alerts.rs  audio.rs  community.rs  config.rs  detector.rs  elevation.rs  engine.rs  flyout.rs  gamepad.rs  gamepad_send.rs  gpu.rs  health.rs  installer.rs  ipc.rs  keepalive.rs  learn.rs  lib.rs  main.rs  menu.rs  monitor.rs  notifications.rs  persist.rs  presets.rs  setup.rs  startup.rs  startup_log.rs  stats.rs  time_util.rs  tray.rs  tray_menu.rs  updates.rs
src-tauri/src/engine/: placement.rs
src-tauri/src/ipc/: config_set.rs
src-tauri/src/presence/: log.rs  memory.rs  mod.rs  rules.rs  screen.rs
src-tauri/windows/: hooks.nsh
